--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ a:hover {
   <h2 class="animate__animated animate__fadeInLeft"> Mục Lục Bài Tập</h2>
   <ul>
     <li class="animate__animated animate__fadeInUp"><a href="VeNha/BaiTap1.html" target="_blank">Bài 1</a></li>
-    <li class="animate__animated animate__fadeInUp animate__delay-1s"><a href="VeNha/Bai Tap 2.html" target="_blank">Bài 2</a></li>
-    <li class="animate__animated animate__fadeInUp animate__delay-2s"><a href="VeNha/Bai Tap 3.html" target="_blank">Bài 3</a></li>
-   <li class="animate__animated animate__fadeInUp animate__delay-2s"><a href="VeNha/Bai Tap 4.html" target="_blank">Bài 4</a></li>
-    <li class="animate__animated animate__fadeInUp animate__delay-2s"><a href="VeNha/Bai Tap 5.html" target="_blank">Bài 5</a></li>
+    <li class="animate__animated animate__fadeInUp"><a href="VeNha/BaiTap2.html" target="_blank">Bài 2</a></li>
+   <li class="animate__animated animate__fadeInUp"><a href="VeNha/BaiTap3.html" target="_blank">Bài 3</a></li>
+   <li class="animate__animated animate__fadeInUp"><a href="VeNha/BaiTap4.html" target="_blank">Bài 4</a></li>
+   <li class="animate__animated animate__fadeInUp"><a href="VeNha/BaiTap5BaiTap5.html" target="_blank">Bài 5</a></li>
   </ul>
 
 </div>
